app/styles/custom.scss
@import '../bower_components/sass-bootstrap/lib/bootstrap';

html, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-family: Arial, sans-serif;
}

$bluegreen: #32a3a1;
$darkishbluegreen: #086260;
$darkgreen: #043e3d;
$white: #ffffff;
$orange: #f45212;
$lightorange: #f47441;
$lightblue: #cee0df;

h1, h2, h3 {
  color: $bluegreen;
}

@mixin circle($color, $radius: 50px) {
  border-radius: 50%;
  border: 5px solid $color;
  height: $radius;
  width: $radius;
}

.navbar-inverse {
  background-color: $bluegreen;
}
.navbar {
  @extend .navbar-inverse;
  @extend .navbar-fixed-top;

  $navHeight: 70px;

  color: $white;
  height: $navHeight;
  font-weight: bolder;
  li {
    height: $navHeight;
    a {
      line-height: $navHeight;
    }
  }
  .navbar-toggle {
    background-color: $darkishbluegreen;
    border: none;
    &:hover, &:focus {
      background-color: $darkishbluegreen;
    }
  }
  .navbar-brand {
    position: absolute;
    left: 50px;
    top: 8px;

    color: $white;
    background: url('../images/accenture_logo_white.png') no-repeat;
    background-size: 100%;
    width: 135px;
    height: 56px;
  }
  .navbar-nav {
    margin-left: 165px;
    li > a {
      color: $white;
    }
    .active {
      a {
        background-color: $darkishbluegreen;
      }
    }
  }
}

.agenda {
  border-left: 1px solid $darkishbluegreen;
}
@media (max-width: $screen-sm-max) {
  .agenda {
    border: none;
  }
}

.intro, .agenda, .registreringsinfo, .registreringsformulaer, antall-registrerte {
  @include make-lg-column(6);
  @include make-md-column(6);
  h2:first-child {
    margin-top: 0;
  }
}
.antall-registrerte {
  @extend .pull-right;
  padding-right: 15px;
  color: $lightblue;
}

.agenda ul {
  padding-left: 0;
  li {
    list-style: none;
    padding-top: 5px;
    div {
      color: $darkishbluegreen;
      display: inline-block;
      vertical-align: top;
      padding-top: 1px;
      padding-left: 10px;
    }
    .presentername {
      color: $orange;
      clear: left;
    }
  }
}
.profilbilde {
  $size: 60px;
  @include circle($bluegreen, $size);

  background-size: $size * 1.1;
  background-repeat: no-repeat;
  background-position: 30%;
  display: inline-block;

  &.margareth {
    background-image: url('../images/margareth.jpg');
  }
  &.joar {
    background-image: url('../images/joar.jpg');
  }
  &.aksel {
    background-image: url('../images/aksel.jpg');
  }
  &.lars-olof {
    background-image: url('../images/lars-olof.jpg');
    background-size: $size * 2/3;
  }
}

.registrering {
  @include make-row(0);
  background-color: $darkishbluegreen;
  h2, h3, p, span, ul {
    color: #ffffff;
  }
  /* top right bottom left */
  padding: 10px 70px 0 50px;
  &.reginfo {
    padding-bottom: 10px;
  }
}
@media (max-width: $screen-sm-max) {
  .jumbotron {
    margin-bottom: 0;
  }
}
@media (max-width: 650px) {
  .jumbotron {
    font-size: 16px;
    padding-bottom: 10px;
  }
}
@media (max-width: 480px) {
  .jumbotron {
    font-size: 12px;
    font-weight: bold;
  }
}
.jumbotron {
  @include make-row(0);
  margin-top: $navbar-height;
  background: url('../images/top-background.png') no-repeat;
  background-size: 100%;
  color: $white;
  .container div {
    @include make-lg-column(6);
    @include make-md-column(6);
  }
}

.registrer {
  @extend .btn;
  @extend .btn-lg;
  color: $white;
  border-radius: 0;
  background-color: $orange;
  border: none;
  &:hover, &:active {
    background-color: $darkgreen;
  }
  &:disabled {
    background-color: $darkgreen;
  }
}

.input-group-addon {
  background-color: $bluegreen;
  border: 0;
  width: 38px;
}
.input-group {
  width: 100%;
  &.phone {
    width: 50%;
  }
}

.kart, #jump-to-register {
  @extend .visible-md;
  @extend .visible-lg;
}
#jump-to-register {
  padding-left: 0;
}

.container,
#main-content {
  max-width: 100%;
  padding-left: 0;
  padding-right: 0;
  >div {
    padding-left: 15px;
    padding-right: 15px;
    &.sted {
      padding-left: 0;
      padding-right: 0;
    }
  }
}
.row {
  margin-left: 0;
  margin-right: 0;
}

.del {
  @include make-row(0);
  a {
    color: $orange;
  }
}

.modal {
  display: block;
  background-color: $white;
  width: 430px;
  height: 260px;
  overflow: visible;
  margin-left: auto;
  margin-right: auto;
  top: 100px;
}

.del {
  $size: 2em;
  .fa {
    font-size: $size;
  }
  .fa-home {
    color: $white;
    background-color: $orange;
    border-radius: 5px;
    font-size: $size * 0.85;
    position: relative;
    top: -2px;
  }
}

